# rudimentary

./: Exercises.hs  Levels.hs  MIDI.hs  Main.hs  Params.hs  README.md  StreamProc.hs  Syntax.hs  eartraining.hs  index.html  rudimentary-server  rudimentary.cabal  server.hs
app/: Accuracy.hs  Main.hs
src/: MIDI.hs  Params.hs  Semantics.hs
