name:                rudimentary
version:             0.1.0.0
synopsis:            Ear training and piano practice game
description:         See README.md
homepage:            https://github.com/luqui/rudimentary#readme
license:             GPL
license-file:        LICENSE
author:              Luke Palmer
maintainer:          lrpalmer@gmail.com
copyright:           2016 Luke Palmer
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:     Levels, MIDI, Params, Syntax, Semantics
  build-depends:       base >= 4.7 && < 5
                     , transformers == 0.5.*
                     , MonadRandom == 0.4.*
                     , dlist == 0.8.*
                     , containers == 0.5.*
                     , parsec == 3.1.*
                     , hmidi == 0.2.*
  default-language:    Haskell2010

executable rudimentary-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rudimentary
                     , MonadRandom == 0.4.*
                     , aeson == 1.0.*
                     , containers == 0.5.*
                     , hmidi == 0.2.*
                     , scotty == 0.11.*
  default-language:    Haskell2010

executable rudimentary-accuracy
  hs-source-dirs:      app
  main-is:             Accuracy.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rudimentary
                     , containers == 0.5.*
                     , hmidi == 0.2.*
                     , stm == 2.4.*
  default-language:    Haskell2010
  

test-suite rudimentary-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rudimentary
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/luqui/rudimentary
